--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Kate Joyce Portfolio</title>
+    <title>Kate's Portfolio 🙋🏼‍♀️</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
+      </style>
   </head>
   <body>
     <div id="root"></div>
