--- a/index.html
+++ b/index.html
@@ -1,17 +1,1 @@
-<!doctype html>
-<html lang="en" dir="ltr">
-
-<head>
-  <meta charset="utf-8">
-  <title>Kate's Portfolio 🙋🏼‍♀️</title>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
-  </style>
-</head>
-
-<body>
-  <div id="root"></div>
-  <script src="bundle.js"></script>
-</body>
-
-</html>
+<!doctype html><html lang="en" dir="ltr"><head><meta charset="utf-8"><title>Kate's Portfolio 🙋🏼‍♀️</title><style>@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');</style></head><body><div id="root"></div><script src="bundle.js"></script></body></html>
