--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<!doctype html><html lang="en" dir="ltr"><head><meta charset="utf-8"><title>Kate's Portfolio 🙋🏼‍♀️</title><style>@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');</style></head><body><div id="root"></div><script src="bundle.js"></script></body></html>
+<!doctype html>
+<html lang="en" dir="ltr">
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv='cache-control' content='no-cache'>
+  <meta http-equiv='expires' content='0'>
+  <meta http-equiv='pragma' content='no-cache'>
+  <title>Kate's Portfolio 🙋🏼‍♀️</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
+  </style>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script src="bundle.js"></script>
+</body>
+
+</html>
